-add page static home

--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -46,6 +46,7 @@ header {
 
 .l-block {
 	display: flex;
+	align-items: center;
 	gap: 30px;
 }
 
@@ -54,3 +55,4 @@ header {
 	width: 30px;
 	height: 30px;
 }
+
