--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -45,6 +45,7 @@ header {
 
 .l-block {
   display: flex;
+  align-items: center;
   gap: 30px;
 }
 
@@ -52,6 +53,49 @@ header {
 .image-profile {
   width: 30px;
   height: 30px;
+}
+
+.wrapper-home {
+  height: 80vh;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.home-container {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+.image-intro {
+  display: block;
+  width: 45vw;
+}
+
+.text-intro_title {
+  font-size: 4rem;
+  margin-bottom: 20px;
+}
+
+.text-intro__subtitle {
+  font-size: 2rem;
+  margin-bottom: 30px;
+}
+
+.btn-cart {
+  width: 125px;
+  padding: 10px 20px;
+  border: 1px solid #000;
+  border-radius: 30px;
+  background: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  transition: transform 0.3s ease-in-out;
+}
+
+.btn-cart:hover {
+  transform: scale(1.2) translateY(-5px);
 }
 
 * {
@@ -64,6 +108,7 @@ html {
 
 .wrapper {
   width: 100%;
+  height: auto;
 }
 
 .container {
