--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -98,6 +98,21 @@ header {
   transform: scale(1.2) translateY(-5px);
 }
 
+.error-page {
+  width: fit-content;
+  margin: 20% auto;
+  font-size: 4rem;
+  animation: puls 2s ease-in-out 0.5s infinite alternate;
+}
+
+@keyframes puls {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.3);
+  }
+}
 * {
   font-family: "Roboto Condensed", sans-serif;
 }
