--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -1,6 +1,7 @@
 @import url('../css/reset.css');
 @import '_header';
 @import '_home';
+@import '_error-page';
 
 * {
 	font-family: 'Roboto Condensed', sans-serif;
