--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -91,7 +91,7 @@ header {
   background: none;
   cursor: pointer;
   font-size: 1.5rem;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
 .btn-cart:hover {
@@ -113,6 +113,13 @@ header {
     transform: scale(1.3);
   }
 }
+.intro-shop {
+  text-align: center;
+  padding: 40px;
+  font-size: 4rem;
+  background-color: #f0f8ff;
+}
+
 * {
   font-family: "Roboto Condensed", sans-serif;
 }
