--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -2,6 +2,7 @@
 @import '_header';
 @import '_home';
 @import '_error-page';
+@import '_shop.scss';
 
 * {
 	font-family: 'Roboto Condensed', sans-serif;
