--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -29,7 +29,7 @@ header {
   color: inherit;
 }
 
-.item-list .link-item::after {
+.link-item::after {
   content: "";
   display: block;
   margin: 1px auto;
@@ -113,11 +113,107 @@ header {
     transform: scale(1.3);
   }
 }
+.card-product {
+  max-width: 250px;
+  height: max-content;
+  box-shadow: 0px 0px 16px #ccc;
+  border-radius: 15px;
+  padding: 10px;
+  cursor: pointer;
+  position: relative;
+}
+
+.card-product--show > img {
+  opacity: 0;
+}
+
+.card-product--show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  height: 0%;
+  border-radius: 15px;
+  background-color: #f0f8ff;
+  opacity: 0.7;
+  transition: 0.5s ease-in-out;
+}
+
+.card-product:hover .card-product--show {
+  height: 100%;
+}
+.card-product:hover .card-product--show > img {
+  animation: slide-icon 0.5s forwards;
+}
+
+@keyframes slide-icon {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.card-product__pict {
+  display: block;
+  width: 100%;
+  max-width: 200px;
+  height: 300px;
+  object-fit: contain;
+  margin: 0 auto 15px;
+}
+
+.card-product__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 90px;
+}
+
+.card-product__title {
+  font-weight: 200;
+  font-size: 2rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.card-product__price {
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
 .intro-shop {
   text-align: center;
   padding: 40px;
   font-size: 4rem;
   background-color: #f0f8ff;
+  margin-bottom: 50px;
+}
+
+.filters-shop {
+  margin-bottom: 100px;
+}
+
+.content {
+  margin: 0 auto;
+}
+
+.cards-products {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+  margin-bottom: 30px;
 }
 
 * {
