--- a/src/assets/sass/_shop.scss
+++ b/src/assets/sass/_shop.scss
@@ -1,9 +1,25 @@
-.wrapper-shop {
-}
+@import '_card-product';
 
 .intro-shop {
 	text-align: center;
 	padding: 40px;
 	font-size: 4rem;
 	background-color: #f0f8ff;
+
+	margin-bottom: 50px;
+}
+
+.filters-shop {
+	margin-bottom: 100px;
+}
+
+.content {
+	margin: 0 auto;
+}
+
+.cards-products {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 30px;
+	margin-bottom: 30px;
 }
