--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -3,6 +3,7 @@
 @import '_home';
 @import '_error-page';
 @import '_shop.scss';
+@import '_cart.scss';
 
 * {
 	font-family: 'Roboto Condensed', sans-serif;
