--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -202,14 +202,32 @@ header {
 }
 
 .filters-shop {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
   margin-bottom: 100px;
+}
+
+.btn-filter {
+  padding: 12px 20px;
+  background-color: #f0f8ff;
+  font-size: 1.8rem;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-filter:hover {
+  transform: scale(1.1);
 }
 
 .content {
   margin: 0 auto;
 }
 
-.cards-products {
+.list-products {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
