--- a/src/assets/sass/_shop.scss
+++ b/src/assets/sass/_shop.scss
@@ -10,14 +10,33 @@
 }
 
 .filters-shop {
+	display: flex;
+	justify-content: center;
+	gap: 20px;
 	margin-bottom: 100px;
+}
+
+.btn-filter {
+	padding: 12px 20px;
+	background-color: #f0f8ff;
+	font-size: 1.8rem;
+	border: none;
+	outline: none;
+	border-radius: 30px;
+	cursor: pointer;
+
+	transition: .3s ease-in-out;
+}
+
+.btn-filter:hover {
+	transform: scale(1.1);
 }
 
 .content {
 	margin: 0 auto;
 }
 
-.cards-products {
+.list-products {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	gap: 30px;
