--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -4,6 +4,7 @@
 @import '_error-page';
 @import '_shop.scss';
 @import '_cart.scss';
+@import '_btn-action';
 
 * {
 	font-family: 'Roboto Condensed', sans-serif;
