--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -5,6 +5,7 @@
 @import '_shop.scss';
 @import '_cart.scss';
 @import '_btn-action';
+@import '_page-product';
 
 * {
 	font-family: 'Roboto Condensed', sans-serif;
